--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
+    "@types/yup": "^0.29.9",
     "axios": "^0.21.0",
+    "formik": "^2.2.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-query": "^2.26.2",
@@ -21,7 +23,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "typescript": "^4.0.3",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
